cmake_minimum_required(VERSION 3.15)
project(C__)

set(CMAKE_CXX_STANDARD 17)




#add_executable(b homework/experiment/b.c)
#add_executable(qsort logic/algorithm/sort/qsort.c)
#add_executable(ctype_test grammar/c/ctype_test.c)
#
#add_executable(arg_test grammar/c/arg_test.c)
#add_executable(const_test grammar/c/const_test.c)
#add_executable(mem_test grammar/c/memory/mem_test.c)
#
#add_executable(kmp logic/algorithm/kmp/kmp.c)
#add_executable(scope_test grammar/c/memory/scope_test.c)
#add_executable(static_in_function_test grammar/c/memory/static_in_function_test.c)
#add_executable(auto_test "grammar/c/memory/auto(c)_test.c")
#add_executable(register grammar/c/memory/register.c)
#add_executable(extern_test grammar/c/memory/extern_test.c)
#add_executable(static_test grammar/c/memory/static_test.c)
#add_executable(ansi_type_restrict grammar/c/memory/ansi_type_restrict.c)
#add_executable(restrict_test grammar/c/memory/restrict_test.c)
#add_executable(atomic_test grammar/c/memory/atomic_test.c)
#add_executable(p1042 contest/Luogu/p1042.cpp)
#add_executable(p1036 contest/Luogu/p1036.cpp)
#add_executable(p1036_ref contest/Luogu/p1036_ref.cpp)
#add_executable(test2 test/test2.c)
add_executable(test grammar/cpp/latest/test.cpp)
add_executable(3_initialize grammar/cpp/latest/unit3/3_initialize.cpp)
add_executable(3_io grammar/cpp/latest/unit3/3_io.cpp)
add_executable(3_type_cast grammar/cpp/latest/unit3/3_type_cast.cpp)
add_executable(4_initialize grammar/cpp/latest/unit4/4_initialize.cpp)
add_executable(4_string grammar/cpp/latest/unit4/4_string.cpp)
add_executable(4_struct grammar/cpp/latest/unit4/4_struct.cpp)
add_executable(4_union grammar/cpp/latest/unit4/4_union.cpp)
add_executable(4_enum grammar/cpp/latest/unit4/4_enum.cpp)
add_executable(4_new grammar/cpp/latest/unit4/4_new.cpp)
add_executable(4_vector grammar/cpp/latest/unit4/4_vector.cpp)
add_executable(5_comma grammar/cpp/latest/unit5/5_comma.cpp)
add_executable(5_for_range grammar/cpp/latest/unit5/5_for_range.cpp)
add_executable(5_io grammar/cpp/latest/unit5/5_io.cpp)
add_executable(6_fileio grammar/cpp/latest/unit6/6_fileio.cpp)
add_executable(7_array_function grammar/cpp/latest/unit7/7_array_function.cpp)
add_executable(7_const_pointer grammar/cpp/latest/unit7/7_const_pointer.cpp)
add_executable(7_funtion_pointer grammar/cpp/latest/unit7/7_funtion_pointer.cpp)
add_executable(8_inline_function grammar/cpp/latest/unit8/8_inline_function.cpp)
add_executable(8_ref grammar/cpp/latest/unit8/8_ref.cpp)
add_executable(8_template grammar/cpp/latest/unit8/8_template.cpp)
add_executable(8_linkage grammar/cpp/latest/unit8/8_linkage.cpp)
add_executable(8_constexpr grammar/cpp/latest/unit8/8_constexpr.cpp)
add_executable(9_external grammar/cpp/latest/unit9/external/9_external.cpp grammar/cpp/latest/unit9/external/9_external_support.cpp)
add_executable(9_twofile grammar/cpp/latest/unit9/twofile/9_twofile_1.cpp grammar/cpp/latest/unit9/twofile/9_twofile_2.cpp)
add_executable(9_cv_qualifier grammar/cpp/latest/unit9/9_cv_qualifier.cpp)
add_executable(9_language_linking grammar/cpp/latest/unit9/9_language_linking.cpp)
add_executable(9_namespace grammar/cpp/latest/unit9/9_namespace.cpp)
add_executable(10_class grammar/cpp/latest/unit10/10_class.cpp)
add_executable(10_deconstruct grammar/cpp/latest/unit10/10_deconstruct.cpp)
add_executable(10_class_construct_list grammar/cpp/latest/unit10/10_class_construct_list.cpp)
add_executable(10_class_member grammar/cpp/latest/unit10/10_class_member.cpp)
add_executable(10_intra_scope_enum grammar/cpp/latest/unit10/10_intra_scope_enum.cpp)
add_executable(11_op_reload grammar/cpp/latest/unit11/11_op_reload.cpp)
add_executable(11_friend grammar/cpp/latest/unit11/11_friend_and_ostream.cpp)
add_executable(11_single_value_constructor grammar/cpp/latest/unit11/11_single_value&copy_constructor.cpp)
add_executable(11_transfer_function grammar/cpp/latest/unit11/11_transfer_function.cpp)
add_executable(11_static_member_initialisation grammar/cpp/latest/unit11/11_static_member_initialisation.cpp)
add_executable(12_brackets_operator grammar/cpp/latest/unit12/12_brackets_operator.cpp)
add_executable(12_static_class_member_function grammar/cpp/latest/unit12/12_static_class_member_function.cpp)
add_executable(12_in_class_initialisation grammar/cpp/latest/unit12/12_in_class_initialisation.cpp)
add_executable(13_base_class grammar/cpp/latest/unit13/13_base_class.cpp)
add_executable(13_virtual grammar/cpp/latest/unit13/13_virtual.cpp)
add_executable(14_valarray grammar/cpp/latest/unit14/14_valarray.cpp)
add_executable(14_private_inherit grammar/cpp/latest/unit14/14_private_inherit.cpp)
add_executable(14_virtual_inherit_class grammar/cpp/latest/unit14/14_virtual_inherit_class.cpp)
add_executable(14_class_template grammar/cpp/latest/unit14/14_class_template.cpp)
add_executable(14_specialization grammar/cpp/latest/unit14/14_specialization.cpp)
add_executable(14_template_alias grammar/cpp/latest/unit14/14_template_alias.cpp)
add_executable(15_friend_class grammar/cpp/latest/unit15/15_friend_class.cpp)
add_executable(15_nested_class grammar/cpp/latest/unit15/15_nested_class.cpp)
add_executable(15_abort grammar/cpp/latest/unit15/15_abort.cpp)
add_executable(15_exception grammar/cpp/latest/unit15/15_exception.cpp)
add_executable(15_rtti grammar/cpp/latest/unit15/15_rtti.cpp)
add_executable(15_cast grammar/cpp/latest/unit15/15_cast.cpp)
add_executable(16_smart_pointer grammar/cpp/latest/unit16/16_smart_pointer.cpp)
add_executable(16_vector grammar/cpp/latest/unit16/16_vector.cpp)
add_executable(16_set grammar/cpp/latest/unit16/16_set.cpp)
add_executable(18_expand_args grammar/cpp/latest/unit18/18_expand_args.cpp)
add_executable(compiler_1 homework/latest/compiler/compiler_1.c)
add_executable(os_1 homework/latest/operationSystem/os_1.cpp)
add_executable(CCPC_B contest/CCPC/CCPC_B.cpp)
add_executable(CCPC_E contest/CCPC/CCPC_E.cpp)
add_executable(course_A course/course_A.cpp)
add_executable(course_B course/course_B.cpp)
add_executable(p1003 contest/Luogu/p1003.cpp)
add_executable(Test_D contest/Test/bak/Test_D.cpp)
add_executable(Test_C contest/Test/bak/Test_C.cpp)
add_executable(Test_F contest/Test/bak/Test_F.cpp)
add_executable(Test_A contest/Test/bak/Test_A.cpp)
add_executable(Test2_A contest/Test/bak/Test2_A.cpp)
add_executable(Test2_B contest/Test/bak/Test2_B.cpp)
add_executable(Test2_C contest/Test/bak/Test2_C.cpp)
add_executable(Test2_F contest/Test/bak/Test2_F.cpp)
add_executable(temp2 temp/temp2.c)
add_executable(os_3 homework/latest/operationSystem/os_3.cpp)
add_executable(os_4 homework/latest/operationSystem/os_4.c)
add_executable(temp3 temp/temp3.cpp)
add_executable(Test3_p1014 contest/Test/bak/Test3_p1014.cpp)
add_executable(Test3_p1012 contest/Test/bak/Test3_p1012.cpp)
add_executable(Cl_A contest/Test/bak/Cl_A.cpp)
add_executable(Cl_B contest/Test/bak/Cl_B.cpp)
add_executable(Cl_C contest/Test/bak/Cl_C.cpp)
add_executable(Cl_D contest/Test/bak/Cl_D.cpp)
add_executable(compiler_4 homework/latest/compiler/compiler_4.cpp)
add_executable(compiler_5 homework/latest/compiler/compiler_5.cpp)
add_executable(A1024 contest/Test/bak/A1024.cpp)
add_executable(A1020 contest/Test/bak/A1020.cpp)
add_executable(compiler_3 homework/latest/compiler/compiler_3.cpp)
add_executable(CI2_A contest/Test/bak/CI2_A.cpp)
add_executable(CI2_B contest/Test/bak/CI2_B.cpp)
add_executable(CI2_C contest/Test/bak/CI2_C.cpp)
add_executable(CI2_D contest/Test/bak/CI2_D.cpp)
add_executable(T contest/Test/bak/T.cpp)
add_executable(CI2_E contest/Test/bak/CI2_E.cpp)